# Hexapod-ROS2-System

./: .gitignore  README.md
Sim Models/: Geometry.txt  Helper Coordinates Blocks.txt  NewHexWagi_Inercja.txt
Sim Models/InertiaTool/: InertiaTool.manifest  config.py
Sim Models/InertiaTool/commands/: __init__.py
Sim Models/InertiaTool/commands/inertiaCalculator/: __init__.py  entry.py
Sim Models/Leg links lower quality/: Heptapod Down Section.stl  Heptapod Top Section.stl
ros_esp_communication/: README.md
ros_esp_communication/esp/: main.cpp  platformio.ini
ros_esp_communication/ros/: websocket_server.py  websocket_server_echo.py
sim_and_real/Project_Testy_src other files/: main_w_imu.cpp  run_all.sh
sim_and_real/Project_Testy_src other files/IMU_2_test/: platformio.ini
sim_and_real/Project_Testy_src other files/IMU_2_test/src/: main.cpp  two_main.cpp
sim_and_real/Projects/ESP UART/: platformio.ini
sim_and_real/Projects/ESP UART/src/: main.cpp
sim_and_real/Projects/ESP_UART_w_IMU/: platformio.ini
sim_and_real/Projects/ESP_UART_w_IMU/src/: main.cpp
sim_and_real/Projects/HEX-ESP/src/: main.cpp
sim_and_real/Projects/PC-ESP/src/: main.cpp
sim_and_real/Projects/Scripts/: Uart_comand_GUI.py
sim_and_real/Projects/Testy/: platformio.ini
sim_and_real/Projects/Testy/src/: main.cpp
sim_and_real/Projects/ros2_ws/src/pajak/: pseudo_apka.py
sim_and_real/ros2_ws_hex/imu_logs/: imu_data_20250612_142230.csv
sim_and_real/ros2_ws_hex/src/: README.md
sim_and_real/ros2_ws_hex/src/hex_gz/: CMakeLists.txt  package.xml
sim_and_real/ros2_ws_hex/src/hex_gz/config/: hardware_controller_manager.yaml  initial_positions.yaml  ros2_controllers.yaml
sim_and_real/ros2_ws_hex/src/hex_gz/launch/: collision_view.launch.py  gazebo.launch.py  gazebo_static.launch.py  gazebov1.launch.py  main.launch.py  robot.launch.py  rviz.launch.py
sim_and_real/ros2_ws_hex/src/hex_gz/rviz/: collision_view.rviz  hexapod.rviz
sim_and_real/ros2_ws_hex/src/hex_gz/scripts/: bi_gate.py  bi_gate_contact_sensors.py  csv_serial_to_imu.py  dance.py  dance1.py  hi.py  imu_data.py  imu_processer.py  imu_topic_data_plotter.py  initial_positions_publisher.py  kwadrat.txt  leg_sequence_player.py  move_2_legs.py  move_body_based_on_imu.py  one_leg.py  point_to_point.py  ripple_gate.py  rotation.py  serial_to_imu.py  setup.py  tri_gate.py  tri_gate_contact_sensor.py  wave_gate.py  wave_gate_contact_sensors.py  wave_gate_square.py  wifi_conect.py  wifi_n_walk.py  ws_run.py
sim_and_real/ros2_ws_hex/src/hex_gz/scripts_m/: motion_node.py  move-forward.py  wifi_connect_test.py
sim_and_real/ros2_ws_hex/src/hex_gz/worlds/: empty_ode.sdf  empty_world.sdf
sim_and_real/ros2_ws_hex/src/hexapod/: CMakeLists.txt  package.xml
sim_and_real/ros2_ws_hex/src/hexapod_description/: CMakeLists.txt  package.xml
sim_and_real/ros2_ws_hex/src/hexapod_description/collision/Version1/: down_section_hitbox.xacro  mid_section_hitbox.xacro  platform_hitbox.xacro  up_section_hitbox.xacro
sim_and_real/ros2_ws_hex/src/hexapod_description/collision/Version2/: down_section_hitbox.xacro  mid_section_hitbox.xacro  platform_hitbox.xacro  tip_hitbox.xacro  up_section_hitbox.xacro
sim_and_real/ros2_ws_hex/src/hexapod_description/config/: initial_positions.yaml
sim_and_real/ros2_ws_hex/src/hexapod_description/contact/: contact_sensor.py
sim_and_real/ros2_ws_hex/src/hexapod_description/control/: controller_manager.yaml  hexapod.ros2_control.xacro
sim_and_real/ros2_ws_hex/src/hexapod_description/gazebo/: hexapod.gazebo.xacro
sim_and_real/ros2_ws_hex/src/hexapod_description/meshes/Version1/: hexapod_eeV1.urdf.xacro  hexapod_leg_eeV1.urdf.xacro
sim_and_real/ros2_ws_hex/src/hexapod_description/meshes/Version2/: leg_down.stl  leg_up.stl  platform.stl
sim_and_real/ros2_ws_hex/src/hexapod_description/rviz/: hexapod.rviz
sim_and_real/ros2_ws_hex/src/hexapod_description/urdf/: camera.xacro  hexapod.urdf.xacro  hexapod_control.urdf.xacro  hexapod_ee.urdf.xacro  hexapod_gazebo.urdf.xacro  hexapod_leg_ee.urdf.xacro  imu.urdf.xacro
sim_and_real/ros2_ws_hex/src/hexapod_hardware/: CMakeLists.txt  package.xml  plugins.xml
sim_and_real/ros2_ws_hex/src/hexapod_hardware/include/hexapod_hardware/: hexapod_hardware_interface.hpp
sim_and_real/ros2_ws_hex/src/hexapod_hardware/src/: hexapod_hardware_interface.cpp
sim_and_real/ros2_ws_hex/src/hexapod_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
sim_and_real/ros2_ws_hex/src/hexapod_moveit_config/config/: hexapod.ros2_control.xacro  hexapod.srdf  hexapod.urdf.xacro  hexapod_hardware.urdf.xacro  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  pilz_cartesian_limits.yaml  ros2_controllers.yaml  sensors_3d.yaml
sim_and_real/ros2_ws_hex/src/hexapod_moveit_config/launch/: demo.launch.py  demo_hardware.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
sim_and_real/ros2_ws_hex/src/hexapod_moveit_config/scripts/: bi_gate.py  leg_sequence_player.py  wave_gate.py
sim_and_real/ros2_ws_hex/src/pajak/: wifi_conect.py
