<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hexapod</name>
  <version>0.0.2</version>
  <description>
    Hexapod ROS2 package.
  </description>
  <maintainer email="bartekbab845@gmail.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>hex_gz</exec_depend>
  <exec_depend>hexapod_description</exec_depend>
  <exec_depend>om_gravity_compensation_controller</exec_depend>
  <exec_depend>om_joint_trajectory_command_broadcaster</exec_depend>
  <exec_depend>om_spring_actuator_controller</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
