<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hexapod_hardware</name>
  <version>0.0.0</version>
  <description>Hardware interface for hexapod robot with ESP32 communication</description>
  <maintainer email="bartekbab845@gmail.com">Bebo457</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export plugin -->
  <export>
    <build_type>ament_cmake</build_type>
    <hardware_interface plugin="${prefix}/plugins.xml" />
  </export>

</package>